--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.1",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "assert": "^1.5.0",
     "axios": "^0.21.1",
     "circomlib": "^0.5.2",
+    "framer-motion": "^4.1.15",
     "fs": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
